--- a/src/konkoni/_variables.scss
+++ b/src/konkoni/_variables.scss
@@ -24,7 +24,7 @@ $margin: 0 $horizontal-margin;
 
 /* Fonts */
 
-$route159: "Route159", serif;
+$route159: "Route159", sans-serif;
 $playfair: "Playfair Display", serif;
 $lora: "Lora", serif;
 
