--- a/src/konkoni/_variables.scss
+++ b/src/konkoni/_variables.scss
@@ -21,6 +21,7 @@ $success-color: $green;
 $article-width: 70ch;
 $horizontal-margin: 20%;
 $margin: 0 $horizontal-margin;
+$horizontal-margin-narrow: 1em;
 
 /* Fonts */
 
