Make cards more wider in narrow viewport

--- a/src/konkoni/_global.scss
+++ b/src/konkoni/_global.scss
@@ -509,6 +509,10 @@ figure {
     margin: 1em $horizontal-margin-narrow;
   }
 
+  .cards {
+    padding: 0;
+  }
+
   .card {
     min-width: 80%;
     min-height: 80%;
