Normalize width of footer cards on narrow window

--- a/src/konkoni/_forms.scss
+++ b/src/konkoni/_forms.scss
@@ -170,3 +170,11 @@ form > header {
     margin-left: 1em;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .split {
+    & > * {
+      max-width: none;
+    }
+  }
+}
