Set margin to articles on narrow viewport

--- a/src/konkoni/_article.scss
+++ b/src/konkoni/_article.scss
@@ -490,3 +490,12 @@ input:checked ~ .cw-container > .cw-text {
     display: inline;
   }
 }
+
+@media screen and (max-width: 600px) {
+  main {
+    article {
+      margin-left: 1em;
+      margin-right: 1em;
+    }
+  }
+}
