--- a/src/konkoni/_variables.scss
+++ b/src/konkoni/_variables.scss
@@ -22,6 +22,7 @@ $article-width: 70ch;
 $horizontal-margin: 20%;
 $margin: 0 $horizontal-margin;
 $horizontal-margin-narrow: 1em;
+$margin-narrow: 0 $horizontal-margin-narrow;
 
 /* Fonts */
 
