Set equal width to like and reshare

--- a/src/konkoni/_article.scss
+++ b/src/konkoni/_article.scss
@@ -501,6 +501,10 @@ input:checked ~ .cw-container > .cw-text {
       > * {
 	margin: $margin-narrow;
       }
+
+      .likes, .reshares {
+        width: 50%;
+      }
     }
   }
 }
