--- a/src/konkoni/_article.scss
+++ b/src/konkoni/_article.scss
@@ -505,6 +505,14 @@ input:checked ~ .cw-container > .cw-text {
       .likes, .reshares {
         width: 50%;
       }
+
+      .comments {
+        margin: 0 $horizontal-margin-narrow;
+
+        > p {
+          padding: 0;
+        }
+      }
     }
   }
 }
