--- a/src/konkoni/_forms.scss
+++ b/src/konkoni/_forms.scss
@@ -139,7 +139,7 @@ form.new-post {
 
 .split {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
 
   & > * {
