Style editor notice in narrow viewport

--- a/src/konkoni/_article.scss
+++ b/src/konkoni/_article.scss
@@ -519,4 +519,10 @@ input:checked ~ .cw-container > .cw-text {
       }
     }
   }
+
+  .bottom-bar {
+    & > div:nth-child(2) {
+      margin: auto $horizontal-margin-narrow;
+    }
+  }
 }
