Make konkoni-light primary color orange

--- a/src/konkoni/_variables.scss
+++ b/src/konkoni/_variables.scss
@@ -7,12 +7,13 @@ $lightpurple: #c2bbee;
 $red: #E92F2F;
 $yellow: #ffe347;
 $green: #23f0c7;
+$orange: #f49d0d;
 
 $background: $white;
 $form-input-background: white;
 $form-input-border: $black;
 $text-color: $black;
-$primary: $purple;
+$primary: $orange;
 $primary-text-color: $white; // text color on primary background (buttons for instance)
 $success-color: $green;
 
