Make konkoni-dark primary color gold and text color gray

--- a/src/konkoni/_dark_variables.scss
+++ b/src/konkoni/_dark_variables.scss
@@ -9,13 +9,14 @@ $lightpurple: #c2bbee;
 $red: #d16666;
 $yellow: #ff934f;
 $blue: #7f96ff;
+$gold: #ffd700;
 
 $background: $black;
 $form-input-background: $gray;
 $form-input-border: $white;
 $text-color: $white;
-$primary: $purple;
-$primary-text-color: $white; // text color on primary background (buttons for instance)
+$primary: $gold;
+$primary-text-color: $gray; // text color on primary background (buttons for instance)
 $success-color: $blue;
 
 //Code Highlighting
