Make article header wider in narrow viewport

--- a/src/konkoni/_forms.scss
+++ b/src/konkoni/_forms.scss
@@ -176,6 +176,10 @@ form > header {
 }
 
 @media screen and (max-width: 600px) {
+  header.center {
+    padding: 1em;
+  }
+
   .split {
     & > * {
       max-width: none;
