Set iframe max-width for YouTube embedding

--- a/src/konkoni/_article.scss
+++ b/src/konkoni/_article.scss
@@ -102,6 +102,10 @@ main article {
     margin: 1em auto;
     padding: 0em 2em;
   }
+
+  iframe {
+    max-width: 100%;
+  }
 }
 
 /* Metadata under the article */
